# Core-KalumeProfesor

./: .gitignore  Procfile  README.md  pyproject.toml  requirements.txt
backend/core/utils/: collections.py  misc.py
backend/project/: asgi.py  urls.py  wsgi.py
backend/project/settings/: __init__.py  base.py  docker.py  envvars.py
local/: settings.dev.py  settings.prod.py
