[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Kalume <abrahammoracejas@gmail.com>"]
license = "MIT"
readme = "README.md"
include = []

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.3"
djangorestframework = "^3.14.0"
django-split-settings = "^1.3.0"
pyyaml = "^6.0.1"
gunicorn = "^21.2.0"
django-on-heroku = "^1.1.2"


[tool.poetry.group.dev.dependencies]
django-debug-toolbar = "^4.3.0"
ruff = "^0.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
